compiler/tests/fixtures/compile_errors/type_constructor_from_variable.fe
contract Foo:

    pub def bar(val: u8) -> u16:
        return u16(val)
